@@ -26,13 +26,13 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.nuxeo.ai.AWSHelper;
 import org.nuxeo.ai.aws.AWSClientFactory;
-import org.nuxeo.ai.aws.dto.TextractResult;
 import org.nuxeo.ai.aws.dto.DocumentAnalysisResult;
+import org.nuxeo.ai.aws.dto.TextractResult;
 import org.nuxeo.ai.aws.mapper.TextractMapper;
 import org.nuxeo.ai.metrics.AWSMetrics;
 import org.nuxeo.ecm.core.blob.ManagedBlob;
@@ -40,6 +40,7 @@ import org.nuxeo.runtime.api.Framework;
 import org.nuxeo.runtime.model.ComponentContext;
 import org.nuxeo.runtime.model.ComponentInstance;
 import org.nuxeo.runtime.model.DefaultComponent;
+
 import software.amazon.awssdk.services.textract.model.AnalyzeDocumentRequest;
 import software.amazon.awssdk.services.textract.model.DetectDocumentTextRequest;
 import software.amazon.awssdk.services.textract.model.Document;
@@ -47,8 +48,8 @@ import software.amazon.awssdk.services.textract.model.FeatureType;
 import software.amazon.awssdk.services.textract.model.S3Object;
 
 /**
- * Implementation of TextractService - Now using abstraction layer
- * AWS SDK dependencies are isolated to this implementation class only
+ * Implementation of TextractService - Now using abstraction layer AWS SDK dependencies are isolated to this
+ * implementation class only
  *
  * @since 2.1.2
  */
@@ -59,8 +60,11 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
     private static final Logger log = LogManager.getLogger(TextractServiceImpl.class);
 
     protected AWSClientFactory clientFactory;
+
     protected Map<String, List<TextractProcessor>> processors;
+
     protected AWSMetrics awsMetrics;
+
     protected final List<TextractProcessorDescriptor> processorDescriptors = new java.util.ArrayList<>();
 
     @Override
@@ -69,8 +73,8 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
             processorDescriptors.add((TextractProcessorDescriptor) contribution);
             // Recompute processors map to include newly added descriptor in case it arrives post-start
             processors = processorDescriptors.stream()
-                    .collect(groupingBy(TextractProcessorDescriptor::getServiceName,
-                            mapping(TextractProcessorDescriptor::getInstance, toList())));
+                                             .collect(groupingBy(TextractProcessorDescriptor::getServiceName,
+                                                     mapping(TextractProcessorDescriptor::getInstance, toList())));
         }
     }
 
@@ -81,8 +85,8 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
         awsMetrics = Framework.getService(AWSMetrics.class);
         // Build processors map from contributed descriptors grouped by serviceName
         processors = processorDescriptors.stream()
-                .collect(groupingBy(TextractProcessorDescriptor::getServiceName,
-                        mapping(TextractProcessorDescriptor::getInstance, toList())));
+                                         .collect(groupingBy(TextractProcessorDescriptor::getServiceName,
+                                                 mapping(TextractProcessorDescriptor::getInstance, toList())));
     }
 
     @Override
@@ -97,9 +101,7 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
             log.debug("Calling detectDocumentText for " + blob.getKey());
         }
 
-        DetectDocumentTextRequest request = DetectDocumentTextRequest.builder()
-                .document(getDocument(blob))
-                .build();
+        DetectDocumentTextRequest request = DetectDocumentTextRequest.builder().document(getDocument(blob)).build();
 
         var awsResponse = clientFactory.getTextractClient().detectDocumentText(request);
         if (log.isDebugEnabled()) {
@@ -116,14 +118,12 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
             log.debug("Calling analyzeDocument for " + blob.getKey() + " with features: " + Arrays.toString(features));
         }
 
-        var featureTypes = Arrays.stream(features)
-                .map(FeatureType::fromValue)
-                .collect(Collectors.toList());
+        var featureTypes = Arrays.stream(features).map(FeatureType::fromValue).toList();
 
         AnalyzeDocumentRequest request = AnalyzeDocumentRequest.builder()
-                .document(getDocument(blob))
-                .featureTypes(featureTypes)
-                .build();
+                                                               .document(getDocument(blob))
+                                                               .featureTypes(featureTypes)
+                                                               .build();
 
         var awsResponse = clientFactory.getTextractClient().analyzeDocument(request);
         if (log.isDebugEnabled()) {
@@ -135,30 +135,33 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
     }
 
     private DocumentAnalysisResult toDocumentAnalysisResult(TextractResult tr) {
-        List<DocumentAnalysisResult.Block> blocks = tr.getBlocks().stream()
-                .map(b -> new DocumentAnalysisResult.Block(
-                        b.getBlockType(), // fixed accessor
-                        b.getConfidence(),
-                        b.getText(),
-                        b.getBoundingBox() != null ? new DocumentAnalysisResult.BoundingBox(
-                                b.getBoundingBox().getWidth(),
-                                b.getBoundingBox().getHeight(),
-                                b.getBoundingBox().getLeft(),
-                                b.getBoundingBox().getTop()) : null,
-                        Collections.emptyList()))
-                .collect(Collectors.toList());
+        List<DocumentAnalysisResult.Block> blocks = tr.blocks()
+                                                      .stream()
+                                                      .map(b -> new DocumentAnalysisResult.Block(b.blockType(), // fixed
+                                                                                                                // accessor
+                                                              b.confidence(), b.text(),
+                                                              b.boundingBox() != null
+                                                                      ? new DocumentAnalysisResult.BoundingBox(
+                                                                              b.boundingBox().width(),
+                                                                              b.boundingBox().height(),
+                                                                              b.boundingBox().left(),
+                                                                              b.boundingBox().top())
+                                                                      : null,
+                                                              Collections.emptyList()))
+                                                      .toList();
         return new DocumentAnalysisResult(blocks);
     }
 
     @Override
     public <T> List<T> processBlocks(DocumentAnalysisResult result, TextractProcessor<T> processor) {
-        if (result == null || result.getBlocks() == null) {
+        if (result == null || result.blocks() == null) {
             return Collections.emptyList();
         }
-        return result.getBlocks().stream()
-                .map(block -> processor.process(Collections.singletonList(block), null, null, null))
-                .filter(java.util.Objects::nonNull)
-                .collect(Collectors.toList());
+        return result.blocks()
+                     .stream()
+                     .map(block -> processor.process(Collections.singletonList(block), null, null, null))
+                     .filter(java.util.Objects::nonNull)
+                     .toList();
     }
 
     @SuppressWarnings("unchecked")
@@ -171,13 +174,8 @@ public class TextractServiceImpl extends DefaultComponent implements TextractSer
      * Helper method to create Document object from ManagedBlob
      */
     private Document getDocument(ManagedBlob blob) {
-        S3Object s3Object = S3Object.builder()
-                .bucket(AWSHelper.getS3BucketName())
-                .name(blob.getKey())
-                .build();
+        S3Object s3Object = S3Object.builder().bucket(AWSHelper.getS3BucketName()).name(blob.getKey()).build();
 
-        return Document.builder()
-                .s3Object(s3Object)
-                .build();
+        return Document.builder().s3Object(s3Object).build();
     }
 }
